; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/dc/extr_inout.c_src_setstring.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/dc/extr_inout.c_src_setstring.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.source = type { i32*, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64, i32* }

@string_vtable = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @src_setstring(%struct.source* %0, i8* %1) #0 {
  %3 = alloca %struct.source*, align 8
  %4 = alloca i8*, align 8
  store %struct.source* %0, %struct.source** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = bitcast i8* %5 to i32*
  %7 = load %struct.source*, %struct.source** %3, align 8
  %8 = getelementptr inbounds %struct.source, %struct.source* %7, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 1
  store i32* %6, i32** %10, align 8
  %11 = load %struct.source*, %struct.source** %3, align 8
  %12 = getelementptr inbounds %struct.source, %struct.source* %11, i32 0, i32 1
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  store i64 0, i64* %14, align 8
  %15 = load %struct.source*, %struct.source** %3, align 8
  %16 = getelementptr inbounds %struct.source, %struct.source* %15, i32 0, i32 0
  store i32* @string_vtable, i32** %16, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
